--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,18 +39,30 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://dexscreener.com/*"],
-      "js": ["src/content/dexscreener.tsx"],
+      "matches": [
+        "https://dexscreener.com/*"
+      ],
+      "js": [
+        "src/content/dexscreener.tsx"
+      ],
       "run_at": "document_idle"
     },
     {
-      "matches": ["https://pump.fun/*"],
-      "js": ["src/content/pumpfun.tsx"],
+      "matches": [
+        "https://pump.fun/*"
+      ],
+      "js": [
+        "src/content/pumpfun.tsx"
+      ],
       "run_at": "document_idle"
     },
     {
-      "matches": ["https://jup.ag/*"],
-      "js": ["src/content/jupiter.tsx"],
+      "matches": [
+        "https://jup.ag/*"
+      ],
+      "js": [
+        "src/content/jupiter.tsx"
+      ],
       "run_at": "document_idle"
     }
   ],
@@ -59,8 +71,16 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/*"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "icons/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "minimum_chrome_version": "116"
 }
