--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,8 @@
   "permissions": [
     "storage",
     "activeTab",
-    "sidePanel"
+    "sidePanel",
+    "contextMenus"
   ],
   "host_permissions": [
     "https://dexscreener.com/*",
@@ -82,5 +83,19 @@
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
-  "minimum_chrome_version": "116"
+  "minimum_chrome_version": "116",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "scanner@cryptorugmunch.com",
+      "strict_min_version": "109.0"
+    }
+  },
+  "sidebar_action": {
+    "default_title": "Marcus \u2014 Rug Munch",
+    "default_panel": "src/sidepanel/index.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png"
+    }
+  }
 }
