--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Rug Munch Scanner",
-  "description": "Real-time rug pull detection for Solana tokens. Risk badges on DexScreener, Pump.fun, Jupiter, and more.",
-  "version": "0.1.0",
+  "description": "Real-time rug pull detection for Solana tokens. Risk badges on DexScreener, Pump.fun, Jupiter, GMGN, BullX, Birdeye, and more.",
+  "version": "0.2.0",
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
@@ -23,6 +23,7 @@
     "https://birdeye.so/*",
     "https://bullx.io/*",
     "https://gmgn.ai/*",
+    "https://photon-sol.tinyastro.io/*",
     "https://cryptorugmunch.com/*",
     "https://cryptorugmunch.ngrok.app/*"
   ],
@@ -40,30 +41,43 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://dexscreener.com/*"
-      ],
-      "js": [
-        "src/content/dexscreener.tsx"
-      ],
+      "matches": ["https://dexscreener.com/*"],
+      "js": ["src/content/dexscreener.tsx"],
       "run_at": "document_idle"
     },
     {
-      "matches": [
-        "https://pump.fun/*"
-      ],
-      "js": [
-        "src/content/pumpfun.tsx"
-      ],
+      "matches": ["https://pump.fun/*"],
+      "js": ["src/content/pumpfun.tsx"],
       "run_at": "document_idle"
     },
     {
-      "matches": [
-        "https://jup.ag/*"
-      ],
-      "js": [
-        "src/content/jupiter.tsx"
-      ],
+      "matches": ["https://jup.ag/*"],
+      "js": ["src/content/jupiter.tsx"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://gmgn.ai/*"],
+      "js": ["src/content/gmgn.tsx"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://bullx.io/*"],
+      "js": ["src/content/bullx.tsx"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://birdeye.so/*"],
+      "js": ["src/content/birdeye.tsx"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://raydium.io/*"],
+      "js": ["src/content/raydium.tsx"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://photon-sol.tinyastro.io/*"],
+      "js": ["src/content/photon.tsx"],
       "run_at": "document_idle"
     }
   ],
@@ -72,30 +86,12 @@
   },
   "web_accessible_resources": [
     {
-      "resources": [
-        "icons/*"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
     }
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
-  "minimum_chrome_version": "116",
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "scanner@cryptorugmunch.com",
-      "strict_min_version": "109.0"
-    }
-  },
-  "sidebar_action": {
-    "default_title": "Marcus \u2014 Rug Munch",
-    "default_panel": "src/sidepanel/index.html",
-    "default_icon": {
-      "16": "icons/icon-16.png",
-      "32": "icons/icon-32.png"
-    }
-  }
+  "minimum_chrome_version": "116"
 }
