--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:firefox": "BROWSER=firefox tsc -b && vite build",
+    "build:firefox": "npm run build:chrome && node scripts/build-firefox.cjs",
     "preview": "vite preview",
     "lint": "eslint src/",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build:chrome": "tsc -b && vite build",
+    "build:all": "npm run build:chrome && npm run build:firefox"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.562.0"
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.30",
     "@types/chrome": "^0.0.314",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/webextension-polyfill": "^0.12.4",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
