feat: Phase 4 — analytics tracking + 'Rug Munch Intelligence' branding
- All user-facing copy updated: 'Rug Munch' → 'Rug Munch Intelligence'
- analytics.ts: fire-and-forget event tracking service
- Popup + side panel: track scan/open events
- manifest v0.2.0: updated name + description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Rug Munch Scanner",
+  "name": "Rug Munch Intelligence",
   "description": "Real-time rug pull detection for Solana tokens. Risk badges on DexScreener, Pump.fun, Jupiter, GMGN, BullX, Birdeye, and more.",
   "version": "0.2.0",
   "icons": {
