Phase 5: Phantom wallet signing + wallet bridge architecture
- walletBridge.ts: Content script that relays Phantom operations from
  extension popup to page-level window.phantom.solana (isolated world bridge)
- Injects page-level script via createElement('script') for main world access
- Background index.ts: Wallet relay handler finds suitable tab with Phantom
- walletAuth.ts: authenticateWithPhantom() — full flow (challenge → sign → verify)
- walletAuth.ts: authenticateWithAddress() — manual fallback for non-Phantom users
- Settings.tsx: Primary Phantom button (#AB9FF2 purple), manual entry in <details>
- Phantom detection on mount (detectPhantom via bridge)
- manifest.json: walletBridge registered for 11 crypto sites
- Includes inline base58 encoder (no deps in page context)
- 60s timeout for wallet popups (user confirmation can be slow)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -112,6 +112,26 @@
         "src/content/photon.tsx"
       ],
       "run_at": "document_idle"
+    },
+    {
+      "matches": [
+        "https://dexscreener.com/*",
+        "https://pump.fun/*",
+        "https://jup.ag/*",
+        "https://raydium.io/*",
+        "https://birdeye.so/*",
+        "https://bullx.io/*",
+        "https://gmgn.ai/*",
+        "https://photon-sol.tinyastro.io/*",
+        "https://phantom.app/*",
+        "https://solscan.io/*",
+        "https://solana.fm/*"
+      ],
+      "js": [
+        "src/content/walletBridge.ts"
+      ],
+      "run_at": "document_idle",
+      "all_frames": false
     }
   ],
   "side_panel": {
