feat: Safari extension support (macOS + iOS)
- Added build-safari.cjs converter script
- Generates Xcode projects for both macOS and iOS Safari
- Strips unsupported APIs (sidePanel) from Safari manifest
- npm run build:safari — generates both Xcode projects
- npm run build:all — Chrome + Firefox + Safari in one shot
- Bundle IDs: com.cryptorugmunch.safari-extension[-ios]
- Only warnings: 'type' (module) and 'use_dynamic_url' — non-critical
- Converter confirmed working: content scripts, storage, tabs, alarms, contextMenus all supported

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src/",
     "typecheck": "tsc --noEmit",
     "build:chrome": "tsc -b && vite build",
-    "build:all": "npm run build:chrome && npm run build:firefox"
+    "build:all": "npm run build && npm run build:firefox && npm run build:safari",
+    "build:safari": "node scripts/build-safari.cjs"
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
