feat: App Store archive pipeline + metadata + privacy policy
- archive-safari.cjs: archive + export + upload pipeline
- npm scripts: archive:safari, archive:macos, archive:ios, archive:upload
- App Store metadata (description, keywords, review notes)
- Privacy policy
- Version bumped to 1.0.0
- ExportOptions plists for automatic signing
- Archive binaries gitignored

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ firebase-debug.log
 dist-safari/
 safari-xcode/
 safari-xcode-ios/
+
+# Archives & exports (App Store builds)
+archives/*.xcarchive
+exports/
