feat: Safari Marcus chat feature parity — auto CA detection, tab listener, markdown formatting
- Auto-detect CA from active tab URL on mount (extractMintFromUrl)
- Listen for tab URL changes (chrome.tabs.onUpdated)
- Markdown formatting in chat bubbles (bold, code)
- Feature flags flipped: EXT_AUTO_SCAN + EXT_RISK_OVERLAY → GA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Rug Munch Intelligence",
-  "description": "Real-time rug pull detection for Solana tokens. Risk badges on DexScreener, Pump.fun, Jupiter, GMGN, BullX, Birdeye, and more.",
+  "description": "Real-time rug pull detection for Solana tokens. Risk badges on DexScreener, Pump.fun, Jupiter, GMGN, and more.",
   "version": "0.2.0",
   "icons": {
     "16": "icons/icon-16.png",
