fix: programmatic content script injection for Safari iOS
Safari iOS has a known bug where declarative content_scripts in
manifest.json don't reliably inject on every page load. Added:

- 'scripting' permission to manifest
- Programmatic injection via chrome.scripting.executeScript in
  service worker, triggered by chrome.tabs.onUpdated
- Double-injection guards (__rms_*_injected) in all 8 content scripts
  to prevent duplicate runs when both declarative and programmatic fire

Fixes risk badges not rendering on pump.fun, dexscreener, etc. in
Safari iOS even with all-sites permission granted.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,8 @@
     "activeTab",
     "sidePanel",
     "contextMenus",
-    "alarms"
+    "alarms",
+    "scripting"
   ],
   "host_permissions": [
     "https://dexscreener.com/*",
