feat: json-render UI catalog — shared component system across all surfaces
Replaces the tiny RiskBadge with a full ScoreCard:
- Donut chart showing risk distribution across categories
- Key metrics grid (price, mcap, liquidity, holders, volume, etc.)
- Expandable category breakdown with severity indicators
- Alert banners for honeypot/freeze/mint authority
- Action buttons (Share, Ask Marcus)
- CRM brand palette throughout

Architecture:
- ui-catalog/catalog.ts — defineCatalog with 16 components + 6 actions
- ui-catalog/registry.tsx — React implementations of all components
- ui-catalog/scanToSpec.ts — converts API ScanResult → json-render spec
- ui-catalog/injectCard.tsx — Shadow DOM injection for content scripts
- ui-catalog/index.ts — barrel export

All 8 content scripts (DexScreener, Pump.fun, GMGN, BullX, Birdeye,
Raydium, Photon, Jupiter) now inject the full ScoreCard as a floating
panel on the right side of supported pages.

Popup also uses json-render Renderer instead of the old ScanResultCard.

This catalog is the foundation for:
- Marcus AI generating dynamic UI specs (chat responses as cards)
- Mini App rendering the same components
- Agent API returning ui_spec alongside raw data
- Any future surface using the same visual language

Stack: @json-render/core + @json-render/react + zod
Tests: 33/33 passing

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@json-render/core": "^0.6.1",
+    "@json-render/react": "^0.6.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
